# fx-calendar-scraper

./: .env.example  .gitignore  EXTRACTORS_QUICK_REF.md  HISTORY_NEWS_EXTRACTOR.md  HISTORY_NEWS_QUICK_START.md  README.md  SEPARATED_EXTRACTORS.md  detail_extractor.py  extractor_common.py  forexfactory_calendar.csv  forexfactory_event_details.csv  history_extractor.py  history_news_extractor.py  news_extractor.py  pyproject.toml  query_details.py  requirements.txt  scraper.py
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  README.md  ai-guidelines.md
docs/extractors/: extractors-quick-ref.md  history-news-extractor.md  history-news-quick-start.md  separated-extractors.md
forexcalendar_scraper/: __init__.py  __main__.py  bootstrap.py  main.py
forexcalendar_scraper/api/: __init__.py  app.py  models.py
forexcalendar_scraper/application/: __init__.py  calendar_scraper_service.py  detail_extraction_service.py  detail_query_service.py  event_catalog_service.py  event_processing.py  history_extraction_service.py  history_news_extraction_service.py  news_extraction_service.py  runtime.py
forexcalendar_scraper/cli/: __init__.py  main.py
forexcalendar_scraper/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  paths.py
forexcalendar_scraper/domain/: __init__.py  entities.py
forexcalendar_scraper/infrastructure/: __init__.py
forexcalendar_scraper/ports/: __init__.py
forexcalendar_scraper/utils/: __init__.py  formatting.py
samples/: README.md
tests/: test_extractor_common.py  test_query_details.py
tests/core/: test_paths.py
tests/integration/: test_api_app.py  test_detail_query_workflow.py
tests/services/: test_calendar_scraper_service.py  (+2 more)
(+9 files in other folders)
